[gd_scene load_steps=2 format=3 uid="uid://bhjschdcxwhq4"]

[ext_resource type="Script" path="res://screens/tabs/diary_tab.gd" id="1_vp0qv"]

[node name="DiaryTab" type="VBoxContainer"]
custom_minimum_size = Vector2(512, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vp0qv")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
offset_right = 600.0
offset_bottom = 43.0

[node name="PreviousDayButton" type="Button" parent="HBoxContainer"]
unique_name_in_owner = true
offset_right = 31.0
offset_bottom = 43.0
text = " < "

[node name="DateLabel" type="Label" parent="HBoxContainer"]
unique_name_in_owner = true
offset_left = 35.0
offset_top = 2.0
offset_right = 565.0
offset_bottom = 40.0
size_flags_horizontal = 3
text = "YYYY-MM-DD"
horizontal_alignment = 1
vertical_alignment = 1

[node name="NextDayButton" type="Button" parent="HBoxContainer"]
unique_name_in_owner = true
offset_left = 569.0
offset_right = 600.0
offset_bottom = 43.0
text = " > "

[node name="DiaryList" type="ItemList" parent="."]
custom_minimum_size = Vector2(0, 256)
offset_top = 47.0
offset_right = 600.0
offset_bottom = 303.0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_top = 307.0
offset_right = 600.0
offset_bottom = 694.0

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
offset_right = 600.0
offset_bottom = 38.0
text = "Title"

[node name="TtileEdit" type="LineEdit" parent="VBoxContainer"]
unique_name_in_owner = true
offset_top = 42.0
offset_right = 600.0
offset_bottom = 85.0
editable = false

[node name="ContentLabel" type="Label" parent="VBoxContainer"]
offset_top = 89.0
offset_right = 600.0
offset_bottom = 127.0
text = "Content"

[node name="ContentEdit" type="TextEdit" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 256)
offset_top = 131.0
offset_right = 600.0
offset_bottom = 387.0
editable = false

[node name="ActionBar" type="HBoxContainer" parent="."]
offset_top = 698.0
offset_right = 600.0
offset_bottom = 741.0
alignment = 1

[node name="AddDiaryButton" type="Button" parent="ActionBar"]
unique_name_in_owner = true
offset_left = 158.0
offset_right = 276.0
offset_bottom = 43.0
text = "Add Diary"

[node name="RemoveDiaryButton" type="Button" parent="ActionBar"]
unique_name_in_owner = true
offset_left = 280.0
offset_right = 442.0
offset_bottom = 43.0
text = "Remove Diary"

[connection signal="pressed" from="HBoxContainer/PreviousDayButton" to="." method="_on_previous_day_button_pressed"]
[connection signal="pressed" from="HBoxContainer/NextDayButton" to="." method="_on_next_day_button_pressed"]
[connection signal="pressed" from="ActionBar/AddDiaryButton" to="." method="_on_add_diary_button_pressed"]
[connection signal="pressed" from="ActionBar/RemoveDiaryButton" to="." method="_on_remove_diary_button_pressed"]
